--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/font": "^14.2.13",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "formidable": "^3.5.2",
     "mongoose": "^8.6.3",
     "next": "14.2.13",
     "react": "^18",
